2003-06-12  Jim Blandy  <jimb@redhat.com>

	* arch-utils.c (always_use_struct_convention): New function.
	* arch-utils.h (always_use_struct_convention): New prototype.
	* alpha-tdep.c (alpha_use_struct_convention): Delete.
	(alpha_gdbarch_init): Register always_use_struct_convention,
	instead of alpha_use_struct_convention.
	* cris-tdep.c (cris_use_struct_convention): Delete.
	(cris_gdbarch_init): Register always_use_struct_convention,
	instead of cris_use_struct_convention.
	* frv-tdep.c (frv_use_struct_convention): Delete.
	(frv_gdbarch_init): Register always_use_struct_convention,
	instead of frv_use_struct_convention.
	* h8300-tdep.c (h8300_use_struct_convention): Delete.
	(h8300_gdbarch_init): Register always_use_struct_convention,
	instead of h8300_use_struct_convention.
	* mips_o32-tdep.c (mips_o32_use_struct_convention): Delete.
	(mips_o32_gdbarch_init): Register always_use_struct_convention,
	instead of mips_o32_use_struct_convention.

2003-06-12  Andrew Cagney  <cagney@redhat.com>

	* wince.c: Include "mips-tdep.h".
	* mips-tdep.h (mips_next_pc): Declare.
	* mcore-tdep.c: Make more local functions static.
	* Makefile.in (wince.o): Update dependencies.

2003-06-12  David Carlton  <carlton@kealia.com>

	* symtab.c (lookup_symbol_aux_minsyms): Replace
	DEPRECATED_SYMBOL_NAME by SYMBOL_LINKAGE_NAME.
	(find_pc_sect_line, search_symbols, rbreak_command): Ditto.
	(COMPLETION_LIST_ADD_SYMBOL): Rewrite in terms of
	SYMBOL_NATURAL_NAME.

2003-06-12  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (tuiDisassem.o): Update dependencies.

2003-06-12  David Carlton  <carlton@bactrian.org>

	* symtab.h: Delete declaration of make_symbol_overload_list.
	Add declaration of lookup_partial_symbol.
	* symtab.c (remove_params): Move to cp-support.c.
	(overload_list_add_symbol, make_symbol_overload_list)
	(sym_return_val_size, sym_return_val_index): Ditto.
	(lookup_partial_symbol): Make extern.
	* cp-support.h: Add declaration of make_symbol_overload_list.